# codex-environment-backup

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: INSTALL.md  UNINSTALL.md  UPDATE.md  settings.local.json
.codex/: INSTALL.md  UNINSTALL.md  UPDATE.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-05-environment-profile.md  2026-05-05-review-fixes.md
docs/superpowers/specs/: 2026-05-05-environment-profile-design.md
scripts/: backup_codex_environment.py  codex_environment_backup.py  restore_codex_environment.py
skills/claude-code-environment-backup/: SKILL.md
skills/claude-code-environment-backup/agents/: openai.yaml
skills/codex-environment-backup/: SKILL.md
skills/codex-environment-backup/agents/: openai.yaml
src/agent_environment_backup/: __init__.py  cli.py  core.py
src/codex_environment_backup/: __init__.py  cli.py  core.py
tests/: test_core.py  test_docs.py  test_repository_sanitization.py
