[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-environment-backup"
version = "0.1.2"
description = "Offline backup, restore, and health checks for local Codex environments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.scripts]
codex-environment-backup = "codex_environment_backup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
