[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-environment-backup"
version = "0.2.0"
description = "Offline backup, restore, and health checks for local AI agent environments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = { text = "MIT" }
keywords = [
    "agent-skills",
    "codex",
    "openai-codex",
    "codex-skill",
    "claude-code",
    "ai-agents",
    "environment-backup",
    "backup-restore",
    "sqlite-backup",
    "local-first",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gaoguobin/codex-environment-backup#readme"
Repository = "https://github.com/gaoguobin/codex-environment-backup"
Issues = "https://github.com/gaoguobin/codex-environment-backup/issues"
Documentation = "https://github.com/gaoguobin/codex-environment-backup#readme"

[project.scripts]
agent-environment-backup = "agent_environment_backup.cli:main"
codex-environment-backup = "codex_environment_backup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
